# storyos

./: .gitignore  README.md  pyproject.toml
content/packs/ingest_v1/: pack.yaml
content/packs/ingest_v1/guardrails/: anti_hallucination.system.md  safety.system.md
content/packs/ingest_v1/prompts/: ingest_extract.system.md  ingest_extract.user.md
content/packs/ingest_v1/schemas/: ingest_extract.schema.json
examples/demo_project/: 00_README.md  project.yaml
examples/demo_project/00_INGEST/inputs/: example_source.md
examples/demo_project/01_CANON/: rules.md  timeline.md  world.md
examples/demo_project/02_CHARACTERS/: amber.md  christopher-robin.md  lyla.md  winnie-the-pooh.md
examples/demo_project/03_OUTLINES/: book_01_outline.md  chapter_01.md
storyos/: cli.py  config.py  errors.py  paths.py
storyos/builtins/agents/: continuity.py  librarian.py  planner.py  voice.py  writer.py
storyos/builtins/checks/: continuity_rules.py
storyos/builtins/exporters/: markdown_exporter.py
storyos/core/: artifacts.py  hashing.py  models.py  policy.py  runlog.py  workspace.py
storyos/evals/: ingest_eval.py
storyos/ingest/: APPROVAL_WORKFLOW.md  approve.py  chunking.py  extract.py  schemas.py  templates.py
storyos/llm/: __init__.py  base.py  openai_adapter.py  openai_adapter_stub.py
storyos/plugins/: loader.py  manifests.py  registry.py
storyos/prompts/: pack_loader.py
storyos/tools/: base.py  file_tools.py  text_tools.py
storyos/workflow/: engine.py  steps.py
(+1 files in other folders)
